<resources>
  <string name="app_name">檔案下載管理員</string>

  <string name="label_url">網址</string>
  <string name="hint_url">http://</string>
  <string name="btn_download">下載</string>
  <string name="btn_reset">重設</string>

  <string name="str_downloading">下載中，請稍候</string>
  <string name="str_download_ok">下載成功</string>

  <string name="dlg_title">提示</string>
  <string name="dlg_message">下載中，請稍候</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_my_file">MyFileActivity</string>
  <string name="err_need_permission">請同意儲存裝置權限，再重開程式</string>
</resources>
